@@ -1,2 +1,2 @@
 wayback http://www.debian.org
-has been crawled.*going all the way back to
+Saved.*[\d,]+.*times
